--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/styles/css/styles.css">
     <script src="/assets/scripts/main.js" type="module" defer></script>
+    <base href="/sustainx/">
 </head>
 
 <body class="light-1 prevent-initial-callback smooth-scroll">
