--- a/about.html
+++ b/about.html
@@ -33,8 +33,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="https://use.typekit.net/wiz5pwc.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="assets/styles/css/styles.css">
+    <link rel="stylesheet" href="/assets/styles/css/styles.css">
     <script src="/assets/scripts/main.js" type="module" defer></script>
+    <base href="/sustainx/">
 </head>
 
 <body class="dark-1 prevent-initial-callback smooth-scroll">
