--- a/work.html
+++ b/work.html
@@ -2,6 +2,7 @@
 <html lang="en-US" class="smooth-scroll" style="background-color: var(--light-1);">
 
 <head>
+    <base href="/sustainx/">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +34,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="https://use.typekit.net/wiz5pwc.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="assets/styles/css/styles.css">
+    <link rel="stylesheet" href="/assets/styles/css/styles.css">
     <script src="/assets/scripts/main.js" type="module" defer></script>
 </head>
 
