Edited href locations

--- a/work.html
+++ b/work.html
@@ -19,14 +19,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="SustainX - Work" />
     <meta property="og:description" content="We're on a mission to help all danish SME's with their green transition. See some of our featured cases." />
-    <meta property="og:url" content="https://joachimdanielsen.dk/" />
+    <meta property="og:url" content="https://joda.website" />
     <meta property="og:site_name" content="SustainX" />
     <meta name="twitter:card" content="summary_large_image" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,8 +34,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="https://use.typekit.net/wiz5pwc.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/styles/css/styles.css">
-    <script src="/assets/scripts/main.js" type="module" defer></script>
+    <link rel="stylesheet" href="assets/styles/css/styles.css">
+    <script src="assets/scripts/main.js" type="module" defer></script>
 </head>
 
 <body class="light-1 prevent-initial-callback smooth-scroll">
@@ -119,11 +119,10 @@
                 <h2>Work</h2>
                 <div class="work-wrapper">
                     <a href="javascript:void(0)" id="svanehoej-card" class="card width-12/12">
-                        <img srcset="
-                                        /assets/images/cases/svanehoej/svanehoej-420w.jpg 420w, 
-                                        /assets/images/cases/svanehoej/svanehoej-768w.jpg 768w, 
-                                        /assets/images/cases/svanehoej/svanehoej-1024w.jpg 1024w, 
-                                        /assets/images/cases/svanehoej/svanehoej-1920w.jpg 1920w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, (max-width: 1024px) 1024w, 1920w"
+                        <img srcset="/assets/images/cases/svanehoej/svanehoej-420w.jpg 420w, 
+                            /assets/images/cases/svanehoej/svanehoej-768w.jpg 768w, 
+                            /assets/images/cases/svanehoej/svanehoej-1024w.jpg 1024w, 
+                            /assets/images/cases/svanehoej/svanehoej-1920w.jpg 1920w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, (max-width: 1024px) 1024w, 1920w"
                             src="/assets/images/cases/svanehoej/svanehoej-1920w.jpg" alt="Red tanker at sea.">
                         <div class="text-wrapper">
                             <span class="kicker">Case study</span>
