--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
     <meta property="og:site_name" content="SustainX" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="https://use.typekit.net/wiz5pwc.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/styles/css/styles.css">
-    <script src="/assets/scripts/main.js" type="module" defer></script>
+    <link rel="stylesheet" href="assets/styles/css/styles.css">
+    <script src="assets/scripts/main.js" type="module" defer></script>
     <base href="/sustainx/">
 </head>
 
