Fixed broken relative paths.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="hero"></div>
                 <div id="hero-video">
                     <video loop autoplay muted playsinline>
-                        <source src="/assets/videos/hero.webm" type="video/webm">
+                        <source src="assets/videos/hero.webm" type="video/webm">
                     </video>
                 </div>
 
@@ -139,8 +139,8 @@
                 <div class="services-wrapper">
                     <div class="grid">
                         <div class="services-container width-6/12">
-                            <img srcset="/assets/images/services/substainability-management-343w.jpg 343w, /assets/images/services/substainability-management-867w.jpg 867w"
-                                sizes="(max-width: 400px) 343w, 867w" src="/assets/images/services/substainability-management-867w.jpg" alt="Two consultants in front of a turbine.">
+                            <img srcset="assets/images/services/substainability-management-343w.jpg 343w, assets/images/services/substainability-management-867w.jpg 867w"
+                                sizes="(max-width: 400px) 343w, 867w" src="assets/images/services/substainability-management-867w.jpg" alt="Two consultants in front of a turbine.">
                             <span class="count-kicker">01.</span>
                             <h3>Substainability Management</h3>
                             <p>
@@ -161,8 +161,8 @@
                     <div class="grid">
                         <div class="grid-spacer width-6/12"></div>
                         <div class="services-container width-6/12">
-                            <img srcset="/assets/images/services/substainability-networks-343w.jpg 343w, /assets/images/services/substainability-networks-867w.jpg 867w"
-                                sizes="(max-width: 400px) 343w, 867w" src="/assets/images/services/substainability-networks-867w.jpg" alt="Business woman sitting in a crowd laughing.">
+                            <img srcset="assets/images/services/substainability-networks-343w.jpg 343w, assets/images/services/substainability-networks-867w.jpg 867w"
+                                sizes="(max-width: 400px) 343w, 867w" src="assets/images/services/substainability-networks-867w.jpg" alt="Business woman sitting in a crowd laughing.">
                             <span class="count-kicker">02.</span>
                             <h3>Substainability Networks</h3>
                             <p>
@@ -181,8 +181,8 @@
                     </div>
                     <div class="grid">
                         <div class="services-container width-6/12">
-                            <img srcset="/assets/images/services/substainability-education-343w.jpg 343w, /assets/images/services/substainability-education-867w.jpg 867w"
-                                sizes="(max-width: 400px) 343w, 867w" src="/assets/images/services/substainability-education-867w.jpg" alt="Pen resting on a sustainability report.">
+                            <img srcset="assets/images/services/substainability-education-343w.jpg 343w, assets/images/services/substainability-education-867w.jpg 867w"
+                                sizes="(max-width: 400px) 343w, 867w" src="assets/images/services/substainability-education-867w.jpg" alt="Pen resting on a sustainability report.">
                             <span class="count-kicker">03.</span>
                             <h3>Substainability Education</h3>
                             <p>
@@ -206,11 +206,11 @@
                 <div class="work-wrapper">
                     <a href="javascript:void(0)" id="svanehoej-card" class="card width-12/12">
                         <img srcset="
-                            /assets/images/cases/svanehoej/svanehoej-420w.jpg 420w, 
-                            /assets/images/cases/svanehoej/svanehoej-768w.jpg 768w, 
-                            /assets/images/cases/svanehoej/svanehoej-1024w.jpg 1024w, 
-                            /assets/images/cases/svanehoej/svanehoej-1920w.jpg 1920w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, (max-width: 1024px) 1024w, 1920w"
-                            src="/assets/images/cases/svanehoej/svanehoej-1920w.jpg" alt="Red tanker at sea.">
+                            assets/images/cases/svanehoej/svanehoej-420w.jpg 420w, 
+                            assets/images/cases/svanehoej/svanehoej-768w.jpg 768w, 
+                            assets/images/cases/svanehoej/svanehoej-1024w.jpg 1024w, 
+                            assets/images/cases/svanehoej/svanehoej-1920w.jpg 1920w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, (max-width: 1024px) 1024w, 1920w"
+                            src="assets/images/cases/svanehoej/svanehoej-1920w.jpg" alt="Red tanker at sea.">
                         <div class="text-wrapper">
                             <span class="kicker">Case study</span>
                             <h3 class="title">Svanehøj</h3>
@@ -220,10 +220,10 @@
                     <div class="grid">
                         <a href="javascript:void(0)" id="polytech-card" class="card width-6/12-xxl">
                             <img srcset="
-                                /assets/images/cases/polytech/polytech-420w.jpg 420w, 
-                                /assets/images/cases/polytech/polytech-768w.jpg 768w, 
-                                /assets/images/cases/polytech/polytech-1024w.jpg 1024w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, 1024w"
-                                src="/assets/images/cases/polytech/polytech-1024w.jpg" alt="Wind turbines and a blue sky.">
+                                assets/images/cases/polytech/polytech-420w.jpg 420w, 
+                                assets/images/cases/polytech/polytech-768w.jpg 768w, 
+                                assets/images/cases/polytech/polytech-1024w.jpg 1024w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, 1024w"
+                                src="assets/images/cases/polytech/polytech-1024w.jpg" alt="Wind turbines and a blue sky.">
                             <div class="text-wrapper">
                                 <span class="kicker">Case study</span>
                                 <h3 class="title">Polytech</h3>
@@ -232,10 +232,10 @@
                         </a>
                         <a href="javascript:void(0)" id="globus-wine-card" class="card width-6/12-xxl">
                             <img srcset="
-                                /assets/images/cases/globus-wine/globus-wine-420w.jpg 420w, 
-                                /assets/images/cases/globus-wine/globus-wine-768w.jpg 768w, 
-                                /assets/images/cases/globus-wine/globus-wine-1024w.jpg 1024w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, 1024w"
-                                src="/assets/images/cases/globus-wine/globus-wine-1024w.jpg" alt="Purple grapes.">
+                                assets/images/cases/globus-wine/globus-wine-420w.jpg 420w, 
+                                assets/images/cases/globus-wine/globus-wine-768w.jpg 768w, 
+                                assets/images/cases/globus-wine/globus-wine-1024w.jpg 1024w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, 1024w"
+                                src="assets/images/cases/globus-wine/globus-wine-1024w.jpg" alt="Purple grapes.">
                             <div class="text-wrapper">
                                 <span class="kicker">Case study</span>
                                 <h3 class="title">Globus Wine</h3>
@@ -257,9 +257,9 @@
                             <div class="wrapper">
                                 <div class="image-wrapper">
                                     <img srcset="
-                                        /assets/images/articles/press-release-new-industry-network/press-release-new-industry-network-768w.jpg 768w,
-                                        /assets/images/articles/press-release-new-industry-network/press-release-new-industry-network-1024w.jpg 1024w" sizes="(max-width: 768px) 768w, 1024w"
-                                        src="/assets/images/articles/press-release-new-industry-network/press-release-new-industry-network-768w.jpg" alt="People talking.">
+                                        assets/images/articles/press-release-new-industry-network/press-release-new-industry-network-768w.jpg 768w,
+                                        assets/images/articles/press-release-new-industry-network/press-release-new-industry-network-1024w.jpg 1024w" sizes="(max-width: 768px) 768w, 1024w"
+                                        src="assets/images/articles/press-release-new-industry-network/press-release-new-industry-network-768w.jpg" alt="People talking.">
                                 </div>
                                 <h3>Press Release: New Industry Network</h3>
                                 <p>SustainX and Dansk Industri launch a new working network for Food & Beverage industry suppliers.</p>
@@ -268,10 +268,10 @@
                         <a href="javascript:void(0)" id="international-day-of-women-and-girls-in-science" class="swiper-slide">
                             <div class="wrapper">
                                 <img srcset="
-                                /assets/images/articles/international-day-of-women-and-girls-in-science/international-day-of-women-and-girls-in-science-768w.jpg 768w, 
-                                /assets/images/articles/international-day-of-women-and-girls-in-science/international-day-of-women-and-girls-in-science-1024w.jpg 1024w"
+                                assets/images/articles/international-day-of-women-and-girls-in-science/international-day-of-women-and-girls-in-science-768w.jpg 768w, 
+                                assets/images/articles/international-day-of-women-and-girls-in-science/international-day-of-women-and-girls-in-science-1024w.jpg 1024w"
                                     sizes="(max-width: 768px) 768w, 1024w"
-                                    src="/assets/images/articles/international-day-of-women-and-girls-in-science/international-day-of-women-and-girls-in-science-768w.jpg"
+                                    src="assets/images/articles/international-day-of-women-and-girls-in-science/international-day-of-women-and-girls-in-science-768w.jpg"
                                     alt="Female scientist smiling.">
                                 <h3>International Day of Women and Girls in Science</h3>
                                 <p>Today we celebrate the international day of women and girls in science.</p>
@@ -316,9 +316,9 @@
                             <div class="wrapper">
                                 <div class="image-wrapper">
                                     <img srcset="
-                                                        /assets/images/articles/mindfulness-for-a-sustainable-future/mindfulness-for-a-sustainable-future-768w.jpg 768w,
-                                                        /assets/images/articles/mindfulness-for-a-sustainable-future/mindfulness-for-a-sustainable-future-1024w.jpg 1024w"
-                                        sizes="(max-width: 768px) 768w, 1024w" src="/assets/images/articles/mindfulness-for-a-sustainable-future/mindfulness-for-a-sustainable-future-768w.jpg"
+                                                        assets/images/articles/mindfulness-for-a-sustainable-future/mindfulness-for-a-sustainable-future-768w.jpg 768w,
+                                                        assets/images/articles/mindfulness-for-a-sustainable-future/mindfulness-for-a-sustainable-future-1024w.jpg 1024w"
+                                        sizes="(max-width: 768px) 768w, 1024w" src="assets/images/articles/mindfulness-for-a-sustainable-future/mindfulness-for-a-sustainable-future-768w.jpg"
                                         alt="Rocks stacked on top of eachother.">
                                 </div>
                                 <h3>Mindfulness for a sustainable future</h3>
@@ -328,10 +328,10 @@
                         <a href="javascript:void(0)" id="circular-solutions-are-not-always-sustainable" class="swiper-slide">
                             <div class="wrapper">
                                 <img srcset="
-                                                /assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-768w.jpg 768w, 
-                                                /assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-1024w.jpg 1024w"
+                                                assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-768w.jpg 768w, 
+                                                assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-1024w.jpg 1024w"
                                     sizes="(max-width: 768px) 768w, 1024w"
-                                    src="/assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-768w.jpg"
+                                    src="assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-768w.jpg"
                                     alt="Hand lifting up a crystal ball near the ocean.">
                                 <h3>Circular solutions are not always sustainable</h3>
                                 <p>Circularity has become an important competitive parameter, but not all circular initiatives are truly sustainable.</p>
@@ -340,9 +340,9 @@
                         <a href="javascript:void(0)" id="making-your-business-more-sustainable" class="swiper-slide">
                             <div class="wrapper">
                                 <img srcset="
-                                                /assets/images/articles/making-your-business-more-sustainable/making-your-business-more-sustainable-768w.jpg 768w, 
-                                                /assets/images/articles/making-your-business-more-sustainable/making-your-business-more-sustainable-1024w.jpg 1024w"
-                                    sizes="(max-width: 768px) 768w, 1024w" src="/assets/images/articles/making-your-business-more-sustainable/making-your-business-more-sustainable-768w.jpg"
+                                                assets/images/articles/making-your-business-more-sustainable/making-your-business-more-sustainable-768w.jpg 768w, 
+                                                assets/images/articles/making-your-business-more-sustainable/making-your-business-more-sustainable-1024w.jpg 1024w"
+                                    sizes="(max-width: 768px) 768w, 1024w" src="assets/images/articles/making-your-business-more-sustainable/making-your-business-more-sustainable-768w.jpg"
                                     alt="Windmills near the beach.">
                                 <h3>Making your business more sustainable</h3>
                                 <p>Today, it is a recognized fact that the world faces global climate challenges.</p>
