Fixed broken paths

--- a/insights/circular-solutions-are-not-always-sustainable.html
+++ b/insights/circular-solutions-are-not-always-sustainable.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="smooth-scroll">
 
 <head>
-    <base href="/sustainx/">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -108,10 +108,10 @@
                 <h1 class="hero-title width-12">Circular solutions are not always sustainable</h1>
             </header>
             <img class="full" srcset="
-                /assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-420w.jpg 420w, 
-                /assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-768w.jpg 768w, 
-                /assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-1024w.jpg 1024w, 
-                /assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-1920w.jpg 1920w"
+                ../assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-420w.jpg 420w, 
+                ../assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-768w.jpg 768w, 
+                ../assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-1024w.jpg 1024w, 
+                ../assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-1920w.jpg 1920w"
                 sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, (max-width: 1024px) 1024w, 1920w"
                 src="../assets/images/articles/circular-solutions-are-not-always-sustainable/circular-solutions-are-not-always-sustainable-1920w.jpg"
                 alt="Hand lifting up a crystal ball near the ocean.">
@@ -188,10 +188,10 @@
             </div>
             <div id="cta-section" class="cta-section-alt">
                 <img srcset="
-                        /assets/images/cta/forrest/forrest-420w.jpg 420w,
-                        /assets/images/cta/forrest/forrest-768w.jpg 768w,
-                        /assets/images/cta/forrest/forrest-1024w.jpg 1024w,
-                        /assets/images/cta/forrest/forrest-1920w.jpg 1920w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, (max-width: 1024px) 1024w, 1920w"
+                        ../assets/images/cta/forrest/forrest-420w.jpg 420w,
+                        ../assets/images/cta/forrest/forrest-768w.jpg 768w,
+                        ../assets/images/cta/forrest/forrest-1024w.jpg 1024w,
+                        ../assets/images/cta/forrest/forrest-1920w.jpg 1920w" sizes="(max-width: 420px) 420w, (max-width: 768px) 768w, (max-width: 1024px) 1024w, 1920w"
                     src="../assets/images/cta/forrest/forrest-1920w.jpg" alt="Forrest.">
                 <div class="text">
                     <h3 class="heading">Want to talk sustainability?</h3>
